# IGADPiGameServer

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  GenerateVisualStudioProjects.bat  README.md  SCOTLANDYARDHELP.md  SERVERHELP.md  appveyor.yml
Applications/: CMakeLists.txt
Applications/BattleShipsTrainer/: CMakeLists.txt
Applications/ServerApp/: CMakeLists.txt
Applications/ServerCmd/: CMakeLists.txt
Data/: battleships_help.txt  scotlandyard_help.txt  server_help.txt  sokoban_help.txt
Data/Sokoban/: FourthSetExtended.txt  MacTommyInventions.txt
Documentation/: BATTLESHIPSHELP.md  SCOTLANDYARDHELP.md  SERVERHELP.md  SOKOBANHELP.md  TRONHELP.md
Documents/: resources.txt
Include/BattleShips/: BattleShipsAI.h  BattleShipsBoard.h  BattleShipsGame.h  BoardData.h  ECollision.h  EDirection.h  EShip.h  GetShipSize.h  ShipPlacementInfo.h
Include/BattleShips/Helpers/: GetDirection.h
Include/BattleShipsLobby/: BattleShipsLobby.h  BattleShipsPacketHelpers.h  BattleShipsServerGame.h  EMessages.h  EMessagesExt.h  MessageStructures.h
Include/Framework/: AssertMessage.h  AutoPointer.h  ClearConsoleWindow.h  ClearContainerContents.h  CommandLine.h  CommandLineParser.h  ConsoleProcedure.h  DateTimeHelpers.h  FileHelpers.h  GetLastErrorAsString.h  HashFunctions.h  HashedString.h  LexicalCast.h  NoCopy.h  ResizeConsoleWindow.h  Sleep.h  Stopwatch.h  StringFunctions.h
Include/Framework/IPC/: AnonymousPipe.h  NamedPipe.h  Pipe.h  PipeClient.h  PipeConstants.h  PipeCreateParameters.h  PipeServer.h  WriteToNamedPipe.h
Include/Framework/Logging/: ConsoleLogger.h  FileLogger.h  ILogger.h
Include/Framework/Math/: Min.h
Include/Framework/Math/RNG/: CreateRandomNumberGenerator.h  IRandomNumberGenerator.h  MersenneTwister.h  mtrand.h
Include/Network/: CheckConnectionAttemptResult.h  CheckStartupResult.h  ClientID.h  EMessages.h  EPlayer.h  EServerErrors.h  GameHelpers.h  GameID.h  GenerateClientID.h  GenerateGameID.h  MessageHelpers.h  PacketHelpers.h  RakNetIncludes.h  WriteBitStream.h
Include/Network/Helpers/: Translate.h
Include/ScotlandYard/: Detective.h  ETravelOption.h  ETravelResult.h  Edge.h  Map.h  Node.h  Player.h  Ply.h  ScotlandYardAI.h  ScotlandYardGame.h  Spy.h  TravelLog.h
Include/ScotlandYard/Helpers/: ValidateTravelLog.h
Include/ScotlandYardLobby/: EMessages.h  EMessagesExt.h  ScotlandYardLobby.h  ScotlandYardServerGame.h
Include/Server/: BaseLobby.h  BaseServerGame.h  EGame.h  GameData.h  ILobby.h  IServerGame.h  LobbyData.h  LobbyUserData.h  Server.h  ServerParameters.h  UserData.h
Include/Server/Helpers/: LobbyHelpers.h  ParseServerParameters.h  UserDataHelpers.h
Include/Server/Utility/: ReadUserData.h  UserLoginData.h  WriteUserData.h
Include/ServerApp/: ServerApp.h  ServerAppMenus.h  ServerLog.h  ServerLogger.h  main.h
Include/Sokoban/: EElement.h  Level.h  LevelLoader.h  OutputLevel.h  SokobanAI.h  SokobanGame.h
Include/SokobanLobby/: EMessages.h  EMessagesExt.h  SokobanLobby.h  SokobanServerGame.h
Include/Tron/: Arena.h  Bike.h  TronAI.h  TronGame.h
Include/TronLobby/: EMessages.h  EMessagesExt.h  TronLobby.h  TronServerGame.h
Libraries/: CMakeLists.txt
Libraries/BattleShips/: CMakeLists.txt
Libraries/BattleShipsLobby/: CMakeLists.txt
Libraries/Framework/: CMakeLists.txt
Libraries/Network/: CMakeLists.txt
Libraries/RakNet/: CMakeLists.txt
Libraries/ScotlandYard/: CMakeLists.txt
Libraries/ScotlandYardLobby/: CMakeLists.txt
Libraries/Server/: CMakeLists.txt
Libraries/Sokoban/: CMakeLists.txt
Libraries/SokobanLobby/: CMakeLists.txt
Libraries/Tron/: CMakeLists.txt
Libraries/TronLobby/: CMakeLists.txt
Scripts/: GenerateVisualStudioSolution.bat  OpenVisualStudioSolution.bat  StartIGADPiGameServerService.sh  StopIGADPiGameServerService.sh  UpdateAndBuild.sh  VSProjectTemplateUserFile.in
Source/BattleShips/: BattleShipsAI.cpp  BattleShipsBoard.cpp  BattleShipsGame.cpp  GetShipSize.cpp  ShipPlacementInfo.cpp
Source/BattleShips/Helpers/: GetDirection.cpp
Source/BattleShipsLobby/: BattleShipsLobby.cpp  BattleShipsPacketHelpers.cpp  BattleShipsServerGame.cpp
Source/BattleShipsTrainer/: main.cpp
Source/Framework/: AssertMessage.cpp  ClearConsoleWindow.cpp  CommandLine.cpp  CommandLineParser.cpp  ConsoleProcedure.cpp  DateTimeHelpers.cpp  FileHelpers.cpp  GetLastErrorAsString.cpp  HashedString.cpp  ResizeConsoleWindow.cpp  Sleep.cpp  Stopwatch.cpp  StringFunctions.cpp
Source/Framework/IPC/: AnonymousPipe.cpp  NamedPipe.cpp  Pipe.cpp  PipeClient.cpp  PipeServer.cpp  WriteToNamedPipe.cpp
Source/Framework/Logging/: ConsoleLogger.cpp  FileLogger.cpp
Source/Framework/Math/RNG/: CreateRandomNumberGenerator.cpp  MersenneTwister.cpp  mtrand.cpp
Source/Network/: CheckConnectionAttemptResult.cpp  CheckStartupResult.cpp  GameHelpers.cpp  GenerateClientID.cpp  GenerateGameID.cpp  MessageHelpers.cpp  PacketHelpers.cpp  WriteBitStream.cpp
Source/Network/Helpers/: Translate.cpp
Source/RakNet/: CCRakNetSlidingWindow.cpp
Source/ScotlandYard/: Detective.cpp  Edge.cpp  Map.cpp  Node.cpp  Player.cpp  Ply.cpp  ScotlandYardAI.cpp  ScotlandYardGame.cpp  Spy.cpp  TravelLog.cpp
Source/ScotlandYard/Helpers/: ValidateTravelLog.cpp
Source/ScotlandYardLobby/: ScotlandYardLobby.cpp  ScotlandYardServerGame.cpp
Source/Server/: BaseLobby.cpp  BaseServerGame.cpp  Server.cpp  Server.cpp~RF2440312f.TMP
Source/Server/Helpers/: LobbyHelpers.cpp  ParseServerParameters.cpp  UserDataHelpers.cpp
Source/Server/Utility/: ReadUserData.cpp  WriteUserData.cpp
Source/ServerApp/: ServerApp.cpp  ServerAppMenus.cpp  ServerLog.cpp  ServerLogger.cpp  main.cpp
Source/ServerCmd/: main.cpp
Source/Sokoban/: Level.cpp  LevelLoader.cpp  OutputLevel.cpp  SokobanAI.cpp  SokobanGame.cpp
Source/SokobanLobby/: SokobanLobby.cpp  SokobanServerGame.cpp
Source/Tron/: Arena.cpp  Bike.cpp  TronAI.cpp  TronGame.cpp
Source/TronLobby/: TronLobby.cpp  TronServerGame.cpp
