cmake_minimum_required(VERSION 3.7.2)
project (Base)

add_subdirectory(BattleShips)
add_subdirectory(BattleShipsLobby)
add_subdirectory(Framework)
add_subdirectory(Network)
#add_subdirectory(RakNet)
add_subdirectory(ScotlandYard)
add_subdirectory(ScotlandYardLobby)
add_subdirectory(Server)
add_subdirectory(Sokoban)
add_subdirectory(SokobanLobby)
add_subdirectory(Tron)
add_subdirectory(TronLobby)